feat: add api documentation for login and register (Setup API Documentation Swagger)
