# src/controller/auth.controller.ts
@@ -65,7 +65,12 @@ export default {
     },
         // user login
     async login(req: Request, res: Response){
-        
+        /**
+            #swagger.requestBody = {
+            required: true,
+            schema: {$ref: "#/components/schemas/LoginRequest"}
+            }
+         */
         const {identifier,password} = req.body as unknown as Tlogin
         try {
             // ambil data user berdasarkan "identifier" -> email dan username
@@ -119,7 +124,11 @@ export default {
     },
 
     async me(req: IReqUser, res: Response) {
-        
+        /**
+            #swagger.security = [{
+            "bearerAuth": []
+            }]
+         */
         try{
             const user = req.user;
             const result = await UserModel.findById(user?.id);
